testsuite/tests/iterators/invalid_iterator/test.out
== foo.lkt ==
foo.lkt:15:5: error: Type Int has no 'to_iterator' field or property
15 |     node.get_lit().to_iterator()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Done
